Site completo com responsividade

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </section>
 
-    <section id="#produtos" class="produtos container">
+    <section id="produtos" class="produtos container">
         <h2>Produtos</h2>
         <div class="produtos-container">
             <div class="produtos-item purple">
@@ -108,44 +108,46 @@
         </div>
     </section>
 
-    <section id="qualidade" class="qualidade container">
-        <ul>
-            <li>
+    <section id="qualidade">
+        <ul class="qualidade container">
+            <li class="qualidade-item">
                 <h3>Inteligente</h3>
                 <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
             </li>
-            <li>
+            <li class="qualidade-item">
                 <h3>Compacto</h3>
                 <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente</p>
             </li>
-            <li>
+            <li class="qualidade-item">
                 <h3>Econômico</h3>
                 <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
             </li>
-            <li>
+            <li class="qualidade-item">
                 <h3>Transparente</h3>
                 <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
             </li>
-            <li>
+            <li class="qualidade-item">
                 <h3>Opaco</h3>
                 <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente</p>
             </li>
-            <li>
+            <li class="qualidade-item">
                 <h3>Sustentável</h3>
                 <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
             </li>
         </ul>
     </section>
 
-    <section class="newsletter container">
-        <div class="newsletter-info">
-            <h3>Newsletter</h3>
-            <p>assine e fique por dentro das novidades</p>
+    <section class="newsletter-bg">
+        <div class="newsletter container">
+            <div class="newsletter-info">
+                <h3>Newsletter</h3>
+                <p>assine e fique por dentro das novidades</p>
+            </div>
+            <form class="newsletter-form" action="./">
+                <input type="email" name="email" id="email" placeholder="Seu e-mail">
+                <button>Assinar</button>
+            </form>
         </div>
-        <form class="newsletter-form" action="./">
-            <input type="email" name="email" id="email" placeholder="Seu e-mail">
-            <button>Assinar</button>
-        </form>
     </section>
 
     <footer class="footer">
